Add Story Table, edit checkbox & typo errors, add colors

--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -153,7 +153,11 @@ Feature: Interviews load
 
 You can wait to write more complex tests till your code is more stable. For example, your variable names should be staying pretty much the same.
 
-## Story Tables
+## Story Tables <!-- Moved -->
+
+See our [**new and improved** Story Table section](writing_tests.mdx#story-table)!
+
+**Old**:
 
 In your Scenario, you will:
 
@@ -213,7 +217,7 @@ Follow these instructions to use the generator:
 1. Copy the Scenario that has been generated for you.
 1. Paste that into the already prepared test file.
 
-This works best with interviews that don't need [index variables](https://docassemble.org/docs/fields.html#index%20variables) or [generic objects](https://docassemble.org/docs/fields.html#generic).
+<!-- This works best with interviews that don't need [index variables](https://docassemble.org/docs/fields.html#index%20variables) or [generic objects](https://docassemble.org/docs/fields.html#generic). -->
 
 ### Step command
 
@@ -1119,7 +1123,7 @@ Error: Parse error in 'docassemble/ChildSupport/data/sources/new_case.feature': 
 
 See our [**new and improved** security section](security.mdx)!
 
-**Old** security content:
+**Old** content:
 
 Using a third-party library or package is always a risk. That said, we take measures to help secure our code, such as protecting our release branches and requiring reviews before merging any new code.
 
