--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -198,7 +198,7 @@ Right now, Story Tables are unable to use GitHub secrets to set variables.
 A Story Table Step **must not** be the first step in your Scenario. The [`interview` Step](#starting-steps) **must** come before it.
 :::
 
-### Generate a Story Table
+### Generate a Story Table <!-- Removed -->
 
 You can use the [story table generator](https://plocket.github.io/alkiln_story/) to generate a Scenario draft. Depending on your interview's code you might need to edit the table for it to work properly, but it can give you a good start.
 
@@ -218,6 +218,7 @@ Follow these instructions to use the generator:
 1. Paste that into the already prepared test file.
 
 <!-- This works best with interviews that don't need [index variables](https://docassemble.org/docs/fields.html#index%20variables) or [generic objects](https://docassemble.org/docs/fields.html#generic). -->
+
 
 ### Step command
 
