--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -88,9 +88,27 @@ You can use some Steps to change what is on the page by filling in fields, press
 
 ### The Story Table Step {#story-table}
 
-The Story Table Step fills in fields on interview pages. It is the Step many of our authors work with the most. In our opinion, in most cases it is the most effective and flexible way to fill in fields in your forms. This makes the test easier to maintain.
+The Story Table Step fills in fields on interview pages. It is the Step many of our authors work with the most. In our opinion, it is the most flexible way to fill in fields in your forms. This makes a test easier to maintain.
 
-The data in the table is a snapshot of the user who is filling out the form. It has this format:
+You can use the [story table generator](https://plocket.github.io/alkiln_story/) to generate a first draft of a full test file that uses a Story Table based on an interview you have finished.
+
+<!--
+TODO: add an extensive instructions section to the generator. Something like:
+1. If you don't have one already, [add a new test file](#how-do-i-add-a-new-test-file). You can leave out the Scenario.
+1. Ensure your server config is set up to [show debug info](https://docassemble.org/docs/config.html#debug).
+1. Run your interview manually until you reach the page you want the story table to get to.
+1. Open the "source" display of the interview. Currently, that looks like angle brackets, `</>`, in the header of the page.
+1. Note the `id` of the page.
+1. Tap the "Show variables and values" button. It will open a new tab showing a big JSON object.
+1. Copy all the text on that page.
+1. Go to the [story table generator](https://plocket.github.io/alkiln_story/).
+1. Paste the JSON into the text area there, as instructed.
+1. Use the other input fields to help finalize your Scenario, including the page `id`.
+1. Copy the Scenario that has been generated for you.
+1. Paste that into the already prepared test file.
+ -->
+
+The Story Table Step is made of a sentence followed by a table. The data in the table is a snapshot of the user who is filling out the form. Each table row describes one fact about the user - one variable in the interview. It has this format:
 
 ```gherkin
   And I get to the question id "<target question id>" with this data:
@@ -99,9 +117,13 @@ The data in the table is a snapshot of the user who is filling out the form. It 
     | <variable name> | <value to set> |
 ```
 
-This Step is made of a sentence followed by a table. The table **must** have two columns with the headings `var` and `value`. There are three types of blanks you need to fill in for this Step: `<target question id>`, `<variable name>`, `<value to set>`.
+As you can see, there are three types of blanks you need to fill in for this Step: `<target question id>`, `<variable name>`, `<value to set>`.
 
-Each row of the table is one variable in the interview. On each page, ALKiln:
+- The starting sentence **must** include the question `id`[^id] of a page in the interview.
+- The table **must** include all the variables and values necessary to get a user from the current page to the page with the given question id.
+- The table **must** have two columns with the headings `var` and `value`.
+
+On each interview page, ALKiln:
 
 1. Checks if the page has the `<target question id>` you gave it at the start
 1. If the page does have the `<target question id>` it stops the Step
@@ -143,7 +165,10 @@ Because of this, the ALKiln report shows a list of unused rows for each table. Y
 :::
 
 
-### Upload
+[^id] You can find the question `id` in your interview code in the `question` block of that page. It is a good idea for every `question` block in your interview to have an id.
+
+
+### Upload {#upload}
 
 ...
 
